test/success/integration/_succ_decl_type_1.hs
x, y :: Int -> Int
x z = z
main = print "hello"