test/fail/unit/_fail_sem_actarg_2.hs
x :: Int -> Int
x y = y
z :: Int
z = x w
main = print "hello"